--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -44,7 +44,7 @@ body {
 }
 
 #grailsLogo {
-    background-color: #abbf78;
+    background-color: rgba(65, 192, 150, 0.77);
 }
 
 a:link, a:visited, a:hover {
@@ -91,7 +91,7 @@ img {
 }
 
 .footer {
-    background: #abbf78;
+    background: rgba(65, 192, 150, 0.77);
     color: #000;
     clear: both;
     font-size: 0.8em;
